--- a/src/App.css
+++ b/src/App.css
@@ -1,34 +1,39 @@
 .App {
-  text-align: center;
+  padding: 0;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.content{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.adminBio{
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+
 }
 
-.App-link {
-  color: #61dafb;
+
+.avatar {
+  height: 60px;
+  pointer-events: none;
+  border-radius: 50%;
 }
 
-@keyframes App-logo-spin {
+@media (prefers-reduced-motion: no-preference) {
+  .avatar {
+    animation: avatar-spin infinite 20s linear;
+  }
+}
+
+
+
+@keyframes avatar-spin {
   from {
     transform: rotate(0deg);
   }
@@ -36,3 +41,5 @@
     transform: rotate(360deg);
   }
 }
+
+
