--- a/src/App.css
+++ b/src/App.css
@@ -5,10 +5,19 @@
 
 .content{
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
-  justify-content: center;
+  flex-wrap: wrap;
+  flex-basis:content;
+  
+
 }
+
+.content > div{
+  margin-bottom: 25px;
+  
+}
+
 
 .adminBio{
   display: flex;
