--- a/src/css/ProductList.css
+++ b/src/css/ProductList.css
@@ -2,15 +2,15 @@
     padding:10px;
 }
 
-table{
+.productList{
     border-collapse: collapse;
-    min-width: 500px;
+    width: 1000px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.12);
     padding: 7px;
     
 }
 
-table tr th{
+.productList tr th{
     background-color: #ffffff;
     color:#000000;
     text-align: left;
