--- a/src/css/WorkersList.css
+++ b/src/css/WorkersList.css
@@ -3,15 +3,15 @@
     
 }
 
-table{
+.workersList{
     border-collapse: collapse;
-    min-width: 500px;
+    width: 1000px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.12);
     padding: 7px;
     
 }
 
-table tr th{
+.workersList tr th{
     background-color: #ffffff;
     color:#000000;
     text-align: left;
