logic behind login

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 .App {
   padding: 0;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  margin:20px auto;
 }
 
 .content{
