--- a/src/css/Admin.css
+++ b/src/css/Admin.css
@@ -1,35 +1,114 @@
 .loginPortal > form{
+    display: flex;
     flex-direction: column;
-    max-width: 400px;
+    max-width: 380px;
     margin: 0 auto;
-    padding: 20px;
+    padding: 10px;
 }
 
 .loginPortal > form label{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 20px;
+    font-size: 18px;
     padding:5px;
     
 }
 
 .loginPortal > form input{
     width: 100%;
-    padding: 8px;
-    margin-bottom: 10px;
+    padding: 10px;
+    margin-bottom: 7px;
     border: 1px solid #ccc;
     border-radius: 4px;
 }
 
 .loginPortal > form input[type="submit"]{
-    width: 100%;
-    padding: 10px 15px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    width: 105%;
+    padding: 12px 12px;
     background-color: #4CAF50;
     color: white;
     border: none;
     border-radius: 4px;
-   cursor: pointer;
+    cursor: pointer;
+    font-size: 15px;
 }
+
+select{
+    width: 105%;
+    height:40px;
+    padding:5px;
+    
+    border: 1px solid #ccc;
+    background-color: #f2f2f2;
+    margin-bottom: 15px;
+    -webkit-appearance: none; /* Remove default arrow for Chrome/Safari */
+    -moz-appearance: none; /* Remove default arrow for Firefox */
+    appearance: none;
+}
+
+/* select::-ms-expand {
+    display:none;
+
+} */
+
+
+select::after{
+    content: "\25BE";
+    position: absolute;
+    top:50%;
+    right: 10px;
+    transform: translateY(-50%);
+    font-size: 14px;
+    pointer-events: none;
+}
+
+
+
 
 .loginPortal{
     margin:50px auto;
+}
+
+.quote{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight:500;
+    font-size: 23px;
+}
+
+.regbtn{
+    padding:13px;
+    width: 105%;
+    margin-top:10px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color:#4CAF50;
+    font-weight: 500;
+}
+
+.input-group{
+    margin:5px;
+}
+
+#logo{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana;
+    font-weight: 500;
+}
+
+
+
+.btn{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-items: baseline;
+    padding:13px;
+    margin-top:10px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color:hsl(214, 73%, 55%);
+    font-weight: 500;
 }
