--- a/src/css/Admin.css
+++ b/src/css/Admin.css
@@ -1,19 +1,19 @@
-.loginPortal > form{
+.login > form{
     display: flex;
+    align-items: center;
     flex-direction: column;
-    max-width: 380px;
     margin: 0 auto;
     padding: 10px;
 }
 
-.loginPortal > form label{
+.login > form label{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 18px;
     padding:5px;
     
 }
 
-.loginPortal > form input{
+.login > form input{
     width: 100%;
     padding: 10px;
     margin-bottom: 7px;
@@ -21,11 +21,11 @@
     border-radius: 4px;
 }
 
-.loginPortal > form input[type="submit"]{
+.login > form input[type="submit"]{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     width: 105%;
     padding: 12px 12px;
-    background-color: #4CAF50;
+    background-color: #0f8d13;
     color: white;
     border: none;
     border-radius: 4px;
@@ -65,8 +65,12 @@ select::after{
 
 
 
-.loginPortal{
-    margin:50px auto;
+.login{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    flex-basis: content;
+    width: 700px;
 }
 
 .quote{
@@ -111,4 +115,11 @@ select::after{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     color:hsl(214, 73%, 55%);
     font-weight: 500;
+}
+
+.loginPortal{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+
 }
