--- a/src/css/Admin.css
+++ b/src/css/Admin.css
@@ -1,21 +1,74 @@
-.login > form{
+.adminBio{
+    padding:10px;
+  }
+  
+  
+  .avatar {
     display: flex;
-    align-items: center;
     flex-direction: column;
-    margin: 0 auto;
-    padding: 10px;
+    align-items: center;
+    justify-content: center;
+    justify-items: center;
+    height: 60px;
+    pointer-events: none;
+    border-radius: 50%;
+  }
+  
+  @media (prefers-reduced-motion: no-preference) {
+    .avatar {
+      animation: avatar-spin infinite 20s linear;
+    }
+  }
+  
+  
+  
+  @keyframes avatar-spin {
+    from {
+      transform: rotate(0deg);
+    }
+    to {
+      transform: rotate(360deg);
+    }
+  }
+  
+
+
+
+
+.loginPortal{
+    display: flex;
+    flex-direction: row;
+    margin:0px;
+    padding:0px
 }
+
+
+
+.login{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 50%;
+}
+
+.login > form{
+    margin-top:35px
+}
+
+
 
 .login > form label{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 18px;
     padding:5px;
+    margin:15px 0px;
     
 }
 
-.login > form input{
+.login > form input[type="email"], input[type="password"]{
     width: 100%;
-    padding: 10px;
+    padding: 10px 1px;
+    margin-top:7px;
     margin-bottom: 7px;
     border: 1px solid #ccc;
     border-radius: 4px;
@@ -23,7 +76,7 @@
 
 .login > form input[type="submit"]{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    width: 105%;
+    width: 100%;
     padding: 12px 12px;
     background-color: #0f8d13;
     color: white;
@@ -33,8 +86,17 @@
     font-size: 15px;
 }
 
+.regbtn{
+    padding:13px;
+    width: 100%;
+    margin-top:10px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color:#4CAF50;
+    font-weight: 500;
+}
+
 select{
-    width: 110%;
+    width: 100%;
     height:40px;
     padding:5px;
     
@@ -65,13 +127,7 @@ select::after{
 
 
 
-.login{
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    flex-basis: content;
-    width: 700px;
-}
+
 
 .quote{
     display: flex;
@@ -82,20 +138,10 @@ select::after{
     font-size: 23px;
 }
 
-.regbtn{
-    padding:13px;
-    width: 105%;
-    margin-top:10px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color:#4CAF50;
-    font-weight: 500;
-}
+
 
 .input-group{
     margin:5px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     width: 100%;
 }
 
@@ -121,12 +167,7 @@ select::after{
     font-weight: 500;
 }
 
-.loginPortal{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
 
-}
 
 .desc{
     display: flex;
@@ -135,3 +176,15 @@ select::after{
     justify-items: center;
     width: 50%;
 }
+
+
+.banner img{
+    width:50%;
+    height: 100%; 
+    padding: 0px;
+}
+
+.error {
+    color: red;
+    font-size: 14px;
+  }
