--- a/src/css/Admin.css
+++ b/src/css/Admin.css
@@ -38,8 +38,13 @@
 .loginPortal{
     display: flex;
     flex-direction: row;
-    margin:0px;
-    padding:0px
+    align-items: center;
+    justify-content: center;
+    
+    /* margin:50px auto; */
+    padding:10px;
+    width: 100%;
+
 }
 
 
@@ -48,7 +53,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 50%;
+    border: 1 solid #ccc;
+    
 }
 
 .login > form{
@@ -151,20 +157,21 @@ select::after{
     align-items: center;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana;
     font-weight: 500;
+    
 }
 
 
 
 .btn{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-items: baseline;
-    padding:13px;
+    padding:11px 13px;
+    margin-left:5px;
     margin-top:10px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color:hsl(214, 73%, 55%);
+    color:#0f8d13;
     font-weight: 500;
+    width: 270px;
+    float:inline-start;
+    border:1px solid #ccc;
 }
 
 
@@ -178,13 +185,25 @@ select::after{
 }
 
 
-.banner img{
+/* .banner img{
     width:50%;
+    background-size: cover;
     height: 100%; 
     padding: 0px;
-}
+    
+} */
 
 .error {
     color: red;
     font-size: 14px;
+  }
+
+
+  label > a{
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 15px;
+    text-decoration: none;
+    text-align: center;
+    color: #0f8d13;
+    
   }
