--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,18 @@
 .App {
   padding: 0;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   
+  margin:0px;
+  position: fixed;
+  left:0;
+  right:0;
+  bottom: 0;
+  top: 0;
+  z-index:1;
+  background-color: #f2f2f2;
+
 }
 
-.content{
+/* .content{
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -17,8 +25,12 @@
 .content > div{
   margin-bottom: 20px;
   
+} */
+
+
+
+.portal{
+
+  padding:0px;
+  margin:0px;
 }
-
-
-
-
