--- a/src/css/Admin.css
+++ b/src/css/Admin.css
@@ -1,5 +1,5 @@
 .adminBio{
-    padding:10px;
+    padding:5px;
   }
   
   
@@ -14,11 +14,11 @@
     border-radius: 50%;
   }
   
-  @media (prefers-reduced-motion: no-preference) {
+  /* @media (prefers-reduced-motion: no-preference) {
     .avatar {
-      animation: avatar-spin infinite 20s linear;
+      animation: avatar-spin infinite 60s linear;
     }
-  }
+  } */
   
   
   
@@ -40,11 +40,11 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    
-    /* margin:50px auto; */
-    padding:10px;
-    width: 100%;
-
+    justify-items: center;
+    flex-wrap: nowrap; 
+    margin:50px auto;
+    padding:0px;
+   
 }
 
 
@@ -53,85 +53,31 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    border: 1 solid #ccc;
-    
+    justify-items: center;
+    border: 0.1px solid #ffffff;
+    border-radius:4%;
+    background-color: #fff;
+    padding:30px;
+    width: 22%;
+    height: 780px;
+    z-index: 0;
+     
 }
 
-.login > form{
-    margin-top:35px
+.inputs{
+  margin-bottom: 40px;
 }
 
+.input-group{
+  width: 350px;
+  display: flex;
+  flex-direction: column;
+  align-items:center;
+  flex-direction: column;
+  justify-content: flex-start;
+  margin:10px 0px;
 
-
-.login > form label{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 18px;
-    padding:5px;
-    margin:15px 0px;
-    
 }
-
-.login > form input[type="email"], input[type="password"]{
-    width: 100%;
-    padding: 10px 1px;
-    margin-top:7px;
-    margin-bottom: 7px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-}
-
-.login > form input[type="submit"]{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    width: 100%;
-    padding: 12px 12px;
-    background-color: #0f8d13;
-    color: white;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    font-size: 15px;
-}
-
-.regbtn{
-    padding:13px;
-    width: 100%;
-    margin-top:10px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color:#4CAF50;
-    font-weight: 500;
-}
-
-select{
-    width: 100%;
-    height:40px;
-    padding:5px;
-    
-    border: 1px solid #ccc;
-    background-color: #f2f2f2;
-    margin-bottom: 15px;
-    -webkit-appearance: none; /* Remove default arrow for Chrome/Safari */
-    -moz-appearance: none; /* Remove default arrow for Firefox */
-    appearance: none;
-}
-
-/* select::-ms-expand {
-    display:none;
-
-} */
-
-
-select::after{
-    content: "\25BE";
-    position: absolute;
-    top:50%;
-    right: 10px;
-    transform: translateY(-50%);
-    font-size: 14px;
-    pointer-events: none;
-}
-
-
-
 
 
 
@@ -146,43 +92,34 @@ select::after{
 
 
 
-.input-group{
-    margin:5px;
-    width: 100%;
-}
-
 #logo{
     display: flex;
     flex-direction: column;
     align-items: center;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana;
     font-weight: 500;
+    font-size: 30px;
+    color:#0f8d13;
     
+
 }
 
 
-
-.btn{
-    padding:11px 13px;
-    margin-left:5px;
-    margin-top:10px;
+#btn{
+    padding:11px 5px;
+    position:absolute;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     color:#0f8d13;
     font-weight: 500;
-    width: 270px;
-    float:inline-start;
-    border:1px solid #ccc;
-}
+    width: 350px;
+    border:0.3px solid #ccc;
+    border-radius:6px;
+    margin:3px 0px 10px 0px;
+    }
 
 
 
-.desc{
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    justify-items: center;
-    width: 50%;
-}
+
 
 
 /* .banner img{
@@ -199,7 +136,7 @@ select::after{
   }
 
 
-  label > a{
+  .create_acc{
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 15px;
     text-decoration: none;
