--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,5 @@
 .App {
-  padding: 0;
   
-  margin:0px;
   position: fixed;
   left:0;
   right:0;
@@ -9,6 +7,7 @@
   top: 0;
   z-index:1;
   background-color: #f2f2f2;
+  
 
 }
 
@@ -30,7 +29,8 @@
 
 
 .portal{
-
+  
+  
   padding:0px;
-  margin:0px;
+  margin:10px auto;
 }
