--- a/src/css/Admin.css
+++ b/src/css/Admin.css
@@ -74,7 +74,7 @@
   flex-direction: column;
   align-items:center;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: center;
   margin:10px 0px;
 
 }
@@ -108,6 +108,7 @@
 #btn{
     padding:11px 5px;
     position:absolute;
+    left:0;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     color:#0f8d13;
     font-weight: 500;
