--- a/src/css/Users.css
+++ b/src/css/Users.css
@@ -1,11 +1,11 @@
 .wlist{
     padding:10px;
-    
+    margin: 0;
 }
 
 .workersList{
     border-collapse: collapse;
-    width: 900px;
+    width: 1300px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.12);
     padding: 7px;
     
@@ -13,22 +13,22 @@
 
 .workersList tr th{
     background-color: #ffffff;
-    color:#000000;
+    
     text-align: left;
 }
 
 th{
     
-    color: #000;
+    
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; 
-     padding:20px;
+    padding:20px;
     
     
 }
 
 td{
     
-    color: #000;
+    
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; 
     padding:20px;
     font-size: 14px;
@@ -42,6 +42,7 @@ tr {
 }
 
 tbody tr:nth-of-type(even){
-    background-color: #dfdbd5;
+    background-color: #313131;
+    color: white;
     box-shadow: 0 0 2px rgba(0, 0, 0, 0.25);
 }
