--- a/src/css/Dashboard.css
+++ b/src/css/Dashboard.css
@@ -51,3 +51,35 @@
     height: 100px;
     
 }
+
+.category{
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    padding: 10px 10px 10px 2px;
+    border: 1px solid #ccc;
+    border-radius:6px;
+    background-color: #70c7f0;
+}
+
+.category i{
+    padding: 0px 10px 0px 5px;
+    
+}
+
+.side-menu{
+    padding:17px;
+
+}
+
+.category-menu ul{
+    list-style-type: none;
+    padding:12px 5px;
+
+}
+
+.category-menu ul li{
+    padding:10px 3px;
+}
+
+.category-menu ul li i {
+    padding:0px 15px 0px 0px;
+}
