--- a/src/css/Users.css
+++ b/src/css/Users.css
@@ -1,13 +1,14 @@
 .wlist{
-    padding:10px;
-    margin: 0;
+    padding:2px;
+    margin-top: 10px;
 }
 
 .workersList{
     border-collapse: collapse;
-    width: 1300px;
+    width: 100%;
+    height: 100%;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.12);
-    padding: 7px;
+    padding: 2px;
     
 }
 
@@ -42,7 +43,7 @@ tr {
 }
 
 tbody tr:nth-of-type(even){
-    background-color: #313131;
+    background-color: #ece9e9;
     color: white;
     box-shadow: 0 0 2px rgba(0, 0, 0, 0.25);
 }
