--- a/src/index.css
+++ b/src/index.css
@@ -3,5 +3,10 @@ body {
   
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  margin: 0px;
+
+  padding:0;
+  margin:0;
+  width: 100%;
+  height: 100%;
 }
+
